# zebra

./: .env.example  .gitignore  .prettierignore  .vercelignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  lighthouserc.json  next.config.ts  package-lock.json  package.json  playwright.config.ts
.github/workflows/: ci.yml  (+1 more)
contracts/zebra_payroll/: Cargo.toml  README.md
contracts/zebra_payroll/src/: lib.rs
contracts/zebra_payroll/test_snapshots/test/: test_double_initialize_fails.1.json  test_duplicate_payroll_fails.1.json  test_get_nonexistent_records.1.json  test_payroll_flow.1.json  test_release_payroll_v3_duplicate_tx_fails.1.json  test_release_payroll_v3_invalid_currency_count_fails.1.json  test_release_payroll_v3_multi_currency_success.1.json  test_release_payroll_v3_tax_mismatch_fails.1.json  test_release_payroll_v3_treasury_insufficient_fails.1.json  test_set_compliance_provider_non_admin_fails.1.json  test_set_verification_key.1.json  test_set_verification_key_non_admin_fails.1.json  test_verify_and_release_invalid_proof_fails.1.json  test_verify_and_release_kyc_fails.1.json
db/: schema.sql  seed.sql
docs/: AUDIT_REPORT.md  DX-REPORT.md
e2e/: demo-mode.spec.ts  payroll-flow.spec.ts  responsive.spec.ts
payroll_circuit/: Nargo.toml  Prover.toml  README.md
payroll_circuit_mc/: Nargo.toml  Prover.toml  README.md
public/: pitch.html
scripts/: bench.py  check_submission_readiness.py  gen-proof-fixture.mjs  prove-and-verify-mc.mjs  prove-and-verify.mjs  release-bump.ts  run_tests.js  seed.js  seed.py  verify_offline.py
(+18 files in other folders)
