[package]
name = "zebra_payroll"
version = "1.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "26.1.0", features = ["alloc"] }
ultrahonk_soroban_verifier = { git = "https://github.com/yugocabrio/rs-soroban-ultrahonk.git" }

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils", "alloc"] }

[profile.release]
opt-level = "z"
overflow-checks = true
